--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd ../.. && pnpm install && pnpm --filter ./packages/fhevm-sdk build && pnpm --filter ./packages/veil-interface build",
-  "outputDirectory": ".next",
-  "installCommand": "cd ../.. && pnpm install",
-  "framework": "nextjs"
+  "buildCommand": "pnpm install --frozen-lockfile && pnpm --filter ./packages/veil-interface build",
+  "outputDirectory": "packages/veil-interface/.next",
+  "installCommand": "pnpm install --frozen-lockfile"
 }
 
