fix: add outputDirectory to vercel.json for Next.js detection

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "pnpm install --frozen-lockfile && pnpm --filter ./packages/veil-interface build",
-  "installCommand": "pnpm install --frozen-lockfile"
+  "installCommand": "pnpm install --frozen-lockfile",
+  "outputDirectory": "packages/veil-interface/.next"
 }
 
