--- a/package.json
+++ b/package.json
@@ -13,55 +13,19 @@
     ]
   },
   "scripts": {
-    "chain": "pnpm hardhat:chain",
-    "compile": "pnpm hardhat:compile",
-    "deploy:localhost": "pnpm hardhat:deploy && pnpm generate",
-    "deploy:sepolia": "pnpm hardhat:deploy:sepolia && pnpm generate",
-    "fork": "pnpm hardhat:fork",
-    "format": "pnpm next:format && pnpm hardhat:format",
+    "dev": "pnpm --filter ./packages/veil-interface dev",
+    "build": "pnpm --filter ./packages/veil-interface build",
+    "start": "pnpm --filter ./packages/veil-interface start",
+    "lint": "pnpm --filter ./packages/veil-interface lint",
+    "test": "pnpm --filter ./packages/veil-interface test",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "generate": "ts-node ./scripts/generateTsAbis.ts",
     "sdk:build": "pnpm --filter ./packages/fhevm-sdk build",
     "sdk:watch": "pnpm --filter ./packages/fhevm-sdk watch",
-    "sdk:test": "pnpm --filter ./packages/fhevm-sdk test",
-    "sdk:test:watch": "pnpm --filter ./packages/fhevm-sdk test:watch",
-    "sdk:clean": "pnpm --filter ./packages/fhevm-sdk clean",
-    "generate": "ts-node ./scripts/generateTsAbis.ts",
-    "hardhat:chain": "pnpm --filter ./packages/hardhat chain",
-    "hardhat:check-types": "pnpm --filter ./packages/hardhat check-types",
-    "hardhat:clean": "pnpm --filter ./packages/hardhat clean",
-    "hardhat:compile": "pnpm --filter ./packages/hardhat compile",
-    "hardhat:deploy": "pnpm --filter ./packages/hardhat deploy:localhost",
-    "hardhat:deploy:sepolia": "pnpm --filter ./packages/hardhat deploy:sepolia",
-    "hardhat:format": "pnpm --filter ./packages/hardhat prettier:write",
-    "hardhat:generate": "pnpm --filter ./packages/hardhat typechain",
-    "hardhat:hardhat-verify": "pnpm --filter ./packages/hardhat verify",
-    "hardhat:lint": "pnpm --filter ./packages/hardhat lint",
-    "hardhat:lint-staged": "pnpm --filter ./packages/hardhat lint",
-    "hardhat:test": "pnpm --filter ./packages/hardhat test",
-    "hardhat:verify": "pnpm --filter ./packages/hardhat verify",
-    "hardhat:verify:sepolia": "pnpm --filter ./packages/hardhat verify:sepolia",
-    "lint": "pnpm next:lint && pnpm hardhat:lint",
-    "next:build": "pnpm --filter ./packages/nextjs build",
-    "next:check-types": "pnpm --filter ./packages/nextjs check-types",
-    "next:format": "pnpm --filter ./packages/nextjs format",
-    "next:lint": "pnpm --filter ./packages/nextjs lint",
-    "next:serve": "pnpm --filter ./packages/nextjs serve",
-    "precommit": "lint-staged",
-    "preinstall": "pnpm sdk:build",
-    "start": "pnpm --filter ./packages/veil-interface dev",
-    "test": "pnpm hardhat:test",
-    "test:showcases": "pnpm test:react && pnpm test:nextjs && pnpm test:vue",
-    "test:react": "pnpm --filter ./packages/react-showcase test",
-    "test:nextjs": "pnpm --filter ./packages/nextjs-showcase test",
-    "test:vue": "pnpm --filter ./packages/vue-showcase test",
-    "vercel": "pnpm --filter ./packages/nextjs vercel",
-    "vercel:login": "pnpm --filter ./packages/nextjs vercel:login",
-    "vercel:yolo": "pnpm --filter ./packages/nextjs vercel:yolo",
-    "verify": "pnpm hardhat:verify",
-    "verify:sepolia": "pnpm hardhat:verify:sepolia"
+    "preinstall": "pnpm sdk:build"
   },
   "dependencies": {
-    "@zama-fhe/relayer-sdk": "^0.3.0-5",
-    "hardhat-deploy": "^0.11.45"
+    "@zama-fhe/relayer-sdk": "^0.3.0-5"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
