--- a/packages/veil-interface/package.json
+++ b/packages/veil-interface/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
-    "dev:turbo": "next dev --turbopack",
+    "dev": "next dev -p 9099",
+    "dev:turbo": "next dev --turbopack -p 9099",
     "lint": "next lint",
-    "start": "next start",
+    "start": "next start -p 9099",
     "test": "vitest run",
     "typechain:build": "typechain --target=ethers-v6 --out-dir ./web3/contracts ./web3/abis/*.json"
   },
